@@ -5,12 +5,25 @@ package com.github.scribejava.core.model;
  */
 public enum Verb {
 
-    GET(false), POST(true), PUT(true), DELETE(true), HEAD(false), OPTIONS(false), TRACE(false), PATCH(true);
+    GET(false), POST(true), PUT(true), DELETE(false, true), HEAD(false), OPTIONS(false), TRACE(false), PATCH(true);
 
+    private final boolean requiresBody;
     private final boolean permitBody;
 
-    Verb(boolean permitBody) {
+    Verb(boolean requiresBody) {
+        this(requiresBody, requiresBody);
+    }
+
+    Verb(boolean requiresBody, boolean permitBody) {
+        if (requiresBody && !permitBody) {
+            throw new IllegalArgumentException();
+        }
+        this.requiresBody = requiresBody;
         this.permitBody = permitBody;
+    }
+
+    public boolean isRequiresBody() {
+        return requiresBody;
     }
 
     public boolean isPermitBody() {
